# AutoTrade

./: .coverage  .coveragerc  .env  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dev.yaml  strategy_bbands.yaml  strategy_macd.yaml  strategy_rsi.yaml
examples/: run_rsi_example.py
reports/: equity_curve.csv  summary.txt  trades.csv
src/autotrade/: app.py  cli.py  dev.yaml  live.py  logging_config.py  settings.py
src/autotrade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/autotrade/analysis/: indicators.py
src/autotrade/backtest/: broker.py  engine.py  metrics.py
src/autotrade/data/: candles.py  csv_loader.py  downloader.py
src/autotrade/exchanges/: base.py  fake.py  upbit.py
src/autotrade/execution/: executor.py  risk.py
src/autotrade/models/: __init__.py  market.py  order.py
src/autotrade/notify/: hooks.py
src/autotrade/strategies/: __init__.py  base.py  bbands.py  macd.py  registry.py  rsi.py  sma_cross.py
test/: test_fake.py
tests/: test_backtest_artifacts.py  test_backtest_report.py  test_bbands_strategy.py  test_cli_download.py  test_downloader_smoke.py  test_fake.py  test_live_guard.py  test_live_smoke.py  test_macd_strategy.py  test_risk.py  test_risk_manager_limits.py  test_rsi_strategy.py  test_upbit_signing.py
